--- a/Untitled0.ipynb
+++ b/Untitled0.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMUJFjGsGrsz2/iCaA+flO8",
+      "authorship_tag": "ABX9TyNIZ3p1pSMMmlAJlXA9laPj",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -54,7 +54,7 @@
         "id": "ec4ynCjMxgzX",
         "outputId": "ad27db39-96de-4263-c8dd-bae4d8247847"
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -104,7 +104,7 @@
         "id": "QMpXZ70n2_pQ",
         "outputId": "2611d869-1442-4cba-c373-24de4fed9bd6"
       },
-      "execution_count": 54,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -115,6 +115,33 @@
             "enter the 3rd no 34\n",
             "the numbers you entered are 84 94 and 34\n",
             "94 is greatest\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a=int(input(\"enter the length of rectangle \"))\n",
+        "b=int(input(\"enter the breadth of rectangle \"))\n",
+        "print(\"area of rectangle = \", a*b )"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "yQ-dsIj__a71",
+        "outputId": "be289440-c833-42f1-f850-1c46bd71f8f7"
+      },
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "enter the length of rectangle 87\n",
+            "enter the breadth of rectangle 87\n",
+            "area of rectangle =  7569\n"
           ]
         }
       ]
